<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:gravity="center"
        android:fontFamily="@font/montserrat"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:layout_marginTop="12dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="?attr/colorOnSurfaceVariant" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code_hint"
            android:inputType="number"
            android:fontFamily="@font/montserrat" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/true_join_via_code_bt"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/join_via_code"
        android:textSize="18sp"
        app:cornerRadius="16dp"
        app:backgroundTint="?attr/colorPrimary"
        app:iconGravity="textStart"
        android:paddingVertical="12dp" />

</LinearLayout>